<resources>
    <string name="app_name">IPC 247</string>

    <string name="menu_home">IPC 247</string>
    <string name="menu_nhansu">Nhân Sự</string>
    <string name="menu_bsc">BSC</string>
    <string name="menu_kho">Kho</string>
    <string name="menu_giaoviec">Giao Việc</string>
    <string name="hint_username">Tên đăng nhập</string>
    <string name="hint_password">Mật khẩu</string>
    <string name="button_sign_in">Đăng Nhập</string>
    <string name="button_close">Đóng</string>
    <string name="button_check_in">Check In</string>
    <string name="button_check_out">Check Out</string>
    <string name="button_sign_up">Sign up</string>
    <string name="button_send">Send</string>
    <string name="text_forgot_password">Forgot password?</string>
    <string name="text_signin_message">Xin chào, vui lòng đăng nhập hệ thống IPC247</string>
    <string name="text_signin_social_media">Or Sign in using social media</string>
    <string name="text_signup_social_media">Or Sign up using social media</string>
    <string name="text_signin_signup">Don\'t have an account? <b>Sign up</b></string>
    <string name="text_signup_terms">By signing up, you agree to our <b>terms and conditions</b></string>
    <string name="text_signup_message">Hello, let\'s set up your account</string>

    <string name="text_forgot_password_title">Forgot password? No worries</string>
    <string name="text_forgot_password_message">We will send you a link to reset your password</string>

    <string name="hint_email">Email</string>
    <string name="hint_phone">Phone</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>