<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/nav_hoso"
        android:icon="@drawable/ic_home_white"
        android:title="@string/menu_home" />

    <item
        android:id="@+id/nav_nhansu"
        android:icon="@drawable/ic_user_white"
        android:title="@string/menu_nhansu" />

    <item
        android:id="@+id/nav_bsc"
        android:icon="@drawable/ic_nghiep_vu_white"
        android:title="@string/menu_bsc" />

    <item
        android:id="@+id/nav_giaoviec"
        android:icon="@drawable/ic_giaoviec_white"
        android:title="@string/menu_giaoviec" />

    <item
        android:id="@+id/nav_Kho"
        android:icon="@drawable/ic_kho"
        android:title="@string/menu_kho" />


</menu>
